fix styles for collapsed SideMenu in SharedFiles

--- a/src/Pages/Cabinet/Components/SharedFiles/SideList/SideList.module.sass
+++ b/src/Pages/Cabinet/Components/SharedFiles/SideList/SideList.module.sass
@@ -1,8 +1,6 @@
 .wrapper
     display: flex
     flex-direction: column
-    width: 308px
-    min-width: 308px
     border-right: 1px solid #e5e5e5
     overflow-x: hidden
     overflow-y: scroll
