--- a/src/Pages/Cabinet/Components/SharedFiles/SideMenu/SideMenu.module.sass
+++ b/src/Pages/Cabinet/Components/SharedFiles/SideMenu/SideMenu.module.sass
@@ -5,6 +5,7 @@
   border-right: 1px solid rgb(174, 174, 174)
   background-color: #fff
   color: #49494B
+  width: 309px
   .header
     display: flex
     align-items: center
@@ -72,8 +73,8 @@
       right: 25px
       cursor: pointer
 .sideMenuCollapsed
-  width: 100px
+  width: 116px
   .header
-    width: 100px
+    width: 116px
   #headerArrow
     transform: rotate(180deg)
