--- a/src/Pages/Cabinet/Components/SharedFiles/WorkElements/FileLineShort/FileLineShort.module.sass
+++ b/src/Pages/Cabinet/Components/SharedFiles/WorkElements/FileLineShort/FileLineShort.module.sass
@@ -87,6 +87,10 @@
   .sign, .smile
     width: 16px
     margin: 0 10px 0 0
+.wrapper.mini
+  padding: 5px
+  .fileAbout
+    justify-content: space-around
 
 .wrapper.active, .wrapper:hover
   .settingWrap
